# django-sermepa

./: .gitignore  CHANGELOG.md  README.rst  pyproject.toml  settings.py  setup.py  urls.py
.github/workflows/: publish.yml  tests.yml
sermepa/: forms.py  mixins.py  models.py  tests.py  urls.py
sermepa_test/: views.py
sermepa_test/templates/: form.html
