[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-sermepa-etxea"
version = "2.1.1"
description = "A django app to emit and listen Redsys/Sermepa POS payments"
readme = "README.rst"
license = {text = "MIT License"}
requires-python = ">=3.8"
authors = [
    {name = "Jon Latorre", email = "info@etxea.net"},
]
classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "django>=3.2",
    "pyDes>=2.0.1",
    "python-dateutil",
]

[project.urls]
Homepage = "https://github.com/etxea/django-sermepa"
Repository = "https://github.com/etxea/django-sermepa"
Issues = "https://github.com/etxea/django-sermepa/issues"
Changelog = "https://github.com/etxea/django-sermepa/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["sermepa*"]
exclude = ["sermepa_test*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "settings"
pythonpath = ["."]
testpaths = ["sermepa"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    py{38,39}-django32
    py{38,39,310}-django40
    py{38,39,310}-django41
    py{38,39,310,311,312}-django42
    py{310,311,312,313}-django50
    py{310,311,312,313}-django51
    lint

[testenv]
deps =
    django32: Django>=3.2,<4.0
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1
    django51: Django>=5.1,<5.2
    pyDes>=2.0.1
    python-dateutil
    pytest
    pytest-django
commands =
    pytest {posargs}

[testenv:lint]
deps =
    ruff
commands =
    ruff check sermepa/
"""
